concord_macros/tests/dsl/fail/fail_generated_local_ep_in_policy_expr.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client GeneratedLocalEpPolicyApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    header "X-Leak" = format!("{}", ep.id)
    -> Text<String>
}

fn main() {}
